Fixed bug with presenting a selected song 	- On some devices such as those that have a visual viewport, the root element of the document's height doesn't change upon window size changes. This created a bug when presenting a slideshow of a selected song. Sometimes, the height of the slideshow doesn't cover the entire window and showed information that should've been covered by the slideshow. This has been fixed so that all window size changes are reflected into the document's root element.

--- a/src/components/slideshow/index.scss
+++ b/src/components/slideshow/index.scss
@@ -150,6 +150,6 @@
 /* Fixes Reveal.js overriding styling causing incorrect height calculations on some devices (like iOS) */
 html {
   overflow: initial !important;
-  height: 100% !important;
+  min-height: 100% !important;
   width: 100% !important;
 }
